Fix some sizes and alignments

--- a/main.css
+++ b/main.css
@@ -4,8 +4,13 @@ body {
    font-family: "Open Sans", sans-serif;
 }
 
+img {
+   display: flex;
+   align-items: center;
+}
+
 .large-img {
-   max-width: 70vh;
+   max-height: 100vh;
 }
 .small-img {
    max-width: 70vw;
@@ -34,7 +39,7 @@ body {
 }
 
 .about {
-   margin: 3em 0;
+   margin: 0.5em 0;
 }
 
 .icons-social i {
